# Cloud_FPGA

./: Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: examples.yml  firmware.yml  host.yml  orchestrator.yml
examples/: README.md
examples/hello_wishbone/: design.py
examples/hello_wishbone/tests/: conftest.py  test_design.py
examples/sat_solver/: README.md  design.py
examples/sat_solver/tests/: conftest.py  test_design.py  test_sat_solver.py
firmware/: HARDWARE.md  build_standalone.py
firmware/src/cloud_fpga_firmware/: memmap.py
firmware/sw/: Makefile  wishbone_tcp.c
host/: README.md
infra/: README.md
orchestrator/: README.md  pyproject.toml
orchestrator/src/cloud_fpga_orchestrator/api/: app.py  deps.py  models.py
orchestrator/src/cloud_fpga_orchestrator/api/routers/: __init__.py  fpga.py  health.py  jobs.py  session.py
orchestrator/src/cloud_fpga_orchestrator/compiler/: __init__.py  errors.py  pipeline.py  sandbox.py  stages.py
orchestrator/src/cloud_fpga_orchestrator/state/: __init__.py  keys.py  models.py  store.py
orchestrator/src/cloud_fpga_orchestrator/workers/: __init__.py  host_client.py  jobs.py  protocol.py  runner.py
orchestrator/tests/e2e/: conftest.py  test_job_flow.py
orchestrator/tests/integration/: conftest.py  test_api.py  test_job_handlers.py  test_store.py
orchestrator/tests/unit/: test_protocol.py  test_state_keys.py  test_state_models.py
scripts/: README.md  measure_latency.py
