[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloud-fpga-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.29",
    "redis>=5.0",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "testcontainers[redis]>=4.7",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_fpga_orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "hardware: requires physical FPGA boards (deselect with -m 'not hardware')",
]

[tool.ruff]
extend = "../ruff.toml"
